cpp/summaries/2020-08-15T00:56:32+10:00-summary
Loading: 
Loading: 0 packages loaded
Analyzing: target //src/pso/main:summary (0 packages loaded, 0 targets configured)
INFO: Analyzed target //src/pso/main:summary (0 packages loaded, 0 targets configured).
INFO: Found 1 target...
[0 / 5] [Prepa] BazelWorkspaceStatusAction stable-status.txt
ERROR: /home/dom/tetrisai/cpp/src/pso/main/BUILD:37:1: C++ compilation of rule '//src/pso/main:summary' failed (Exit 1) gcc failed: error executing command /usr/bin/gcc -U_FORTIFY_SOURCE -fstack-protector -Wall -Wunused-but-set-parameter -Wno-free-nonheap-object -fno-omit-frame-pointer '-std=c++0x' -MD -MF ... (remaining 332 argument(s) skipped)

Use --sandbox_debug to see verbose messages from the sandbox
src/pso/main/main_summary.cpp: In function 'void getBranchSearchDefs(std::ostream&)':
src/pso/main/main_summary.cpp:69:51: error: 'int BranchSearcherDefs::TOP_N_BLOCKS' is private within this context
   69 |   fout << "TOP_N_BLOCKS: " << BranchSearcherDefs::TOP_N_BLOCKS << '\n';
      |                                                   ^~~~~~~~~~~~
In file included from ./src/shared/BranchSearcher/BranchSearcher.tpp:5,
                 from ./src/shared/NewGetNextMove.tpp:11,
                 from ./src/pso/NewEvaluateWeightingsFactory.tpp:4,
                 from ./src/pso/summary/SummaryApiUtility.tpp:7,
                 from ./src/pso/summary/SummaryApi.tpp:4,
                 from ./src/pso/summary/SummaryApi.h:38,
                 from src/pso/main/main_summary.cpp:1:
./src/shared/BranchSearcher/defs.h:4:14: note: declared private here
    4 |   static int TOP_N_BLOCKS;
      |              ^~~~~~~~~~~~
src/pso/main/main_summary.cpp:70:56: error: 'int BranchSearcherDefs::INIT_TOP_N_BLOCKS' is private within this context
   70 |   fout << "INIT_TOP_N_BLOCKS: " << BranchSearcherDefs::INIT_TOP_N_BLOCKS << '\n';
      |                                                        ^~~~~~~~~~~~~~~~~
In file included from ./src/shared/BranchSearcher/BranchSearcher.tpp:5,
                 from ./src/shared/NewGetNextMove.tpp:11,
                 from ./src/pso/NewEvaluateWeightingsFactory.tpp:4,
                 from ./src/pso/summary/SummaryApiUtility.tpp:7,
                 from ./src/pso/summary/SummaryApi.tpp:4,
                 from ./src/pso/summary/SummaryApi.h:38,
                 from src/pso/main/main_summary.cpp:1:
./src/shared/BranchSearcher/defs.h:5:14: note: declared private here
    5 |   static int INIT_TOP_N_BLOCKS;
      |              ^~~~~~~~~~~~~~~~~
src/pso/main/main_summary.cpp:71:44: error: 'int BranchSearcherDefs::DEPTH' is private within this context
   71 |   fout << "DEPTH: " << BranchSearcherDefs::DEPTH << '\n';
      |                                            ^~~~~
In file included from ./src/shared/BranchSearcher/BranchSearcher.tpp:5,
                 from ./src/shared/NewGetNextMove.tpp:11,
                 from ./src/pso/NewEvaluateWeightingsFactory.tpp:4,
                 from ./src/pso/summary/SummaryApiUtility.tpp:7,
                 from ./src/pso/summary/SummaryApi.tpp:4,
                 from ./src/pso/summary/SummaryApi.h:38,
                 from src/pso/main/main_summary.cpp:1:
./src/shared/BranchSearcher/defs.h:6:14: note: declared private here
    6 |   static int DEPTH;
      |              ^~~~~
src/pso/main/main_summary.cpp:72:61: error: 'int BranchSearcherDefs::DEPTH_WITH_KNOWN_BLOCK' is private within this context
   72 |   fout << "DEPTH_WITH_KNOWN_BLOCK: " << BranchSearcherDefs::DEPTH_WITH_KNOWN_BLOCK << '\n';
      |                                                             ^~~~~~~~~~~~~~~~~~~~~~
In file included from ./src/shared/BranchSearcher/BranchSearcher.tpp:5,
                 from ./src/shared/NewGetNextMove.tpp:11,
                 from ./src/pso/NewEvaluateWeightingsFactory.tpp:4,
                 from ./src/pso/summary/SummaryApiUtility.tpp:7,
                 from ./src/pso/summary/SummaryApi.tpp:4,
                 from ./src/pso/summary/SummaryApi.h:38,
                 from src/pso/main/main_summary.cpp:1:
./src/shared/BranchSearcher/defs.h:7:14: note: declared private here
    7 |   static int DEPTH_WITH_KNOWN_BLOCK;
      |              ^~~~~~~~~~~~~~~~~~~~~~
src/pso/main/main_summary.cpp: In function 'fort::char_table getNoroLookaheadData(const SummaryApi&, const std::vector<std::__cxx11::basic_string<char> >&)':
src/pso/main/main_summary.cpp:93:23: error: 'int BranchSearcherDefs::DEPTH_WITH_KNOWN_BLOCK' is private within this context
   93 |   BranchSearcherDefs::DEPTH_WITH_KNOWN_BLOCK = 3;
      |                       ^~~~~~~~~~~~~~~~~~~~~~
In file included from ./src/shared/BranchSearcher/BranchSearcher.tpp:5,
                 from ./src/shared/NewGetNextMove.tpp:11,
                 from ./src/pso/NewEvaluateWeightingsFactory.tpp:4,
                 from ./src/pso/summary/SummaryApiUtility.tpp:7,
                 from ./src/pso/summary/SummaryApi.tpp:4,
                 from ./src/pso/summary/SummaryApi.h:38,
                 from src/pso/main/main_summary.cpp:1:
./src/shared/BranchSearcher/defs.h:7:14: note: declared private here
    7 |   static int DEPTH_WITH_KNOWN_BLOCK;
      |              ^~~~~~~~~~~~~~~~~~~~~~
Target //src/pso/main:summary failed to build
Use --verbose_failures to see the command lines of failed build steps.
INFO: Elapsed time: 1.940s, Critical Path: 1.86s
INFO: 12 processes: 12 linux-sandbox.
FAILED: Build did NOT complete successfully
ERROR: Build failed. Not running target
FAILED: Build did NOT complete successfully
